[package]
name = "pending_grab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.17.0"
dotenv = "0.15.0"
tokio = { version = "1.18.0", features = ["full"] }
env_logger = "0.9.0"
log = "0.4.16"